Fix dropdown info being cut off

--- a/source-code/mmria/mmria-server/wwwroot/form-designer/css/main.css
+++ b/source-code/mmria/mmria-server/wwwroot/form-designer/css/main.css
@@ -124,6 +124,10 @@
     padding-right: 0;
 }
 
+.form-designer-wrapper .form-designer-canvas .form-field-item {
+    padding: 10px;
+}
+
 .form-designer-wrapper .form-designer-canvas label.form-field-item:hover,
 .form-designer-wrapper .form-designer-canvas label.resize-drag:hover {
     border: none;
@@ -156,12 +160,6 @@
     background: var(--white);
     top: 0;
     transform: translateY(-50%);
-}
-
-/* Adding min-height to input and select controls */
-.form-designer-wrapper .form-designer-canvas input.form-field-item,
-.form-designer-wrapper .form-designer-canvas select.form-field-item {
-    min-height: 54px;
 }
 
 /* Buttons */
