--- a/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
+++ b/source-code/mmria/mmria-server/wwwroot/styles/mmria-custom.css
@@ -836,17 +836,11 @@ ul {
     border: var(--border-width) solid;
     border-color: var(--neutral);
     border-radius: 4px;
-    padding: 15px;
+    padding: 10px;
 }
 .construct-output input:focus,
 .construct-output textarea:focus {
     border-color: #712177;
-}
-
-/* When an input is read only */
-.construct-output input,
-.construct-output select {
-    min-height: 54px;
 }
 
 /* When an input is read only */
